# eagle_auv

./: .gitignore  dive_test.py  instructions.txt  square_mission.py  square_mission.py.save
eagle_auv/eagle_interfaces/: CMakeLists.txt  package.xml
eagle_auv/eagle_interfaces/msg/: Detection.msg
eagle_auv/eagle_nav/: package.xml  setup.cfg  setup.py
eagle_auv/eagle_nav/eagle_nav/: mission_manager.py  sub_pilot.py
eagle_auv/eagle_vision/: package.xml  setup.cfg  setup.py
eagle_auv/eagle_vision/eagle_vision/: yolo_node.py
eagle_simulation/models/Gate/: model.config  model.sdf
eagle_simulation/models/Gate/meshes/: Robosubgate2025.mtl
eagle_simulation/models/GateLeftImageLabel/: model.sdf
eagle_simulation/models/GateRightImageLabel/: model.sdf
eagle_simulation/world/: eagle_world.sdf  underwater.world
