<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eagle_nav</name>
  <version>0.0.1</version>
  <description>Navigation framework for EagleAUV</description>
  <maintainer email="eagleauv@usm.edu">Prabesh Pathak</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>mavros_msgs</depend>
  <depend>eagle_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
